Fix: Reworked Live TV cells to fix issues with cover overlap. focus color and height

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -3272,18 +3272,13 @@ div[data-role="controlgroup"] a.ui-btn-active {
     display: var(--itemOriginalTitleVisibility);
 }
 
-.channelPrograms + .channelPrograms,
-.guide-channelHeaderCell + .guide-channelHeaderCell {
-    margin-top: 0;
-}
-
 .channelPrograms,
-.guide-channelHeaderCell,
 .programCell {
     border-color: transparent;
     /* this disables the 'color coded backgrounds' */
     background-color: transparent !important;
     border-radius: var(--smallRadius);
+    height: 4.42em;
 }
 
 .guideProgramName {
@@ -3305,22 +3300,38 @@ div[data-role="controlgroup"] a.ui-btn-active {
     padding: 0;
 }
 
-.guideChannelImage {
-    background-color: rgba(255, 255, 255, 0.05);
-    bottom: 0.35em;
-    right: 0.35em;
-    top: 0.35em;
-    width: calc(100% - 0.7em);
-    border-radius: var(--smallerRadius);
+.layout-mobile .guideChannelImage {
+    background-position: center;
+    width: calc(100% - var(--sidePadding));
+    right: 0;
+}
+
+.guide-channelHeaderCell {
+    background-color: rgba(255, 255, 255, 0.125);
+    margin: 0.35em 0.7em 0.7em 0.7em;
+    width: auto;
+    height: calc(4.42em - 0.7em);
+    border-radius: var(--smallRadius);
+}
+
+.guideChannelNumber {
+    font-size: 1em;
 }
 
 #guideTab {
     padding-top: 3em !important;
 }
 
-.guide-channelHeaderCell:focus,
-.programCell:focus {
+.guide-channelHeaderCell:focus {
     background-color: var(--highlightOutlineColor) !important;
+}
+
+.programCell:focus {
+    background-color: transparent !important;
+}
+
+.programCell:focus > .guideProgramName {
+    background-color: var(--highlightOutlineColor);
 }
 
 .emby-select-iconbutton {
